--- a/Cataloguer/Views/Home/PartialSearchView.cshtml
+++ b/Cataloguer/Views/Home/PartialSearchView.cshtml
@@ -1,5 +1,4 @@
-﻿@using Cataloguer.Models
-@model ViewObject
+﻿@model ViewObject
 
 <div class="panel panel-default">
     <div class="panel-heading">
