--- a/Cataloguer/Views/Local/PartialTableWithTracks.cshtml
+++ b/Cataloguer/Views/Local/PartialTableWithTracks.cshtml
@@ -1,5 +1,4 @@
-﻿@using Cataloguer.Models
-@model List<Track>
+﻿@model List<Track>
 
 <h2 class="text-center">Tracklist</h2>
 <table class="table table-hover table-striped table-bordered">
