--- a/Cataloguer/Views/Home/Track.cshtml
+++ b/Cataloguer/Views/Home/Track.cshtml
@@ -1,12 +1,11 @@
-﻿@using Cataloguer.Models
-@model Track
+﻿@model Track
 @{
     ViewBag.Title = Model.Name;
 }
 
 <div class="row">
     <div class="col-sm-4 col-md-4 col-lg-4">
-        <img width="100%" class="img-thumbnail" src="@Model.GetPictureLink()" />
+        <img width="100%" class="img-thumbnail" src="@Model.PictureLink" />
     </div>
     <div class="col-sm-8 col-md-8 col-lg-8">
         <h1 class="text-center">@Model.Name</h1>
@@ -18,8 +17,8 @@
             <h4>Album : @Html.ActionLink(Model.Album.Name, "Album", "Home", 
                        new { albumName = Model.Album.Name, artistName = Model.Artist.Name }, new { }) </h4>
         }
-        <h4>Scrobbles : @Model.GetScrobbles()</h4>
-        <h4>Listeners : @Model.GetListeners()</h4>
-        <p>@Model.GetInfo()</p>
+        <h4>Scrobbles : @Model.Scrobbles</h4>
+        <h4>Listeners : @Model.Listeners</h4>
+        <p>@Model.Info</p>
     </div>
 </div>
