--- a/Cataloguer/Views/Local/Album.cshtml
+++ b/Cataloguer/Views/Local/Album.cshtml
@@ -1,12 +1,11 @@
-﻿@using Cataloguer.Models
-@model Album
+﻿@model Album
 @{
     ViewBag.Title = Model.Name;
 }
 
 <div class="row">
     <div class="col-sm-3 col-md-3 col-lg-3">
-        <img width="100%" class="img-thumbnail" src="@Model.GetPictureLink()" />
+        <img width="100%" class="img-thumbnail" src="@Model.PictureLink" />
     </div>
     <div class="col-sm-9 col-md-9 col-lg-9">
         <h1 class="text-center">@Model.Name</h1>
