--- a/Cataloguer/Views/Home/_SearchCardArtist.cshtml
+++ b/Cataloguer/Views/Home/_SearchCardArtist.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Artist
 
-<a asp-controller="Home" asp-action="ArtistProfile" asp-route-name="@Model.Name" class="panel panel-success">
+<a asp-controller="Home" asp-action="Artist" asp-route-name="@Model.Name" class="panel panel-success">
     <div class="panel-heading">
         <p class="text-center">@Model.Name</p>
     </div>
