--- a/Cataloguer/wwwroot/css/site.css
+++ b/Cataloguer/wwwroot/css/site.css
@@ -9,8 +9,11 @@ body {
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 0px;
+    padding-top: 15px;
+    padding-left: 50px;
+    padding-right: 50px;
+    width: auto;
 }
 
 /* Carousel */
