--- a/Cataloguer/Views/Manage/Index.cshtml
+++ b/Cataloguer/Views/Manage/Index.cshtml
@@ -1,22 +1,24 @@
-﻿@model IndexViewModel
+﻿@model ApplicationUser
+@inject Repository Db
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
 }
 
 <h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
+@Html.Partial("_StatusMessage", ViewBag.StatusMessage as string)
 <div class="row">
     <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
+            <input hidden asp-for="Id">
             <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <label asp-for="UserName"></label>
+                <input asp-for="UserName" class="form-control" disabled />
             </div>
             <div class="form-group">
                 <label asp-for="Email"></label>
-                @if (Model.IsEmailConfirmed)
+                @if (Model.EmailConfirmed)
                 {
                     <div class="input-group">
                         <input asp-for="Email" class="form-control" />
@@ -34,6 +36,29 @@
                 <label asp-for="PhoneNumber"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="BirthYear"></label>
+                <input asp-for="BirthYear" class="form-control" type="number"/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Gender"></label>
+                <select asp-for="Gender" class="form-control">
+                    <option value="0">Female</option>
+                    <option value="1">Male</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Country"></label>
+                <select asp-for="CountryId" asp-items="Db.GetCountries()" class="form-control"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Language"></label>
+                <select asp-for="LanguageId" asp-items="Db.GetLanguages()" class="form-control"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="Temperament"></label>
+                <select asp-for="TemperamentId" asp-items="Db.GetTemperaments()" class="form-control"></select>
             </div>
             <button type="submit" class="btn btn-default">Save</button>
         </form>
