--- a/Cataloguer/Views/Manage/Index.cshtml
+++ b/Cataloguer/Views/Manage/Index.cshtml
@@ -12,9 +12,14 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input hidden asp-for="Id">
+            <input hidden asp-for="SecurityStamp">
+            <input hidden asp-for="NormalizedEmail">
+            <input hidden asp-for="NormalizedUserName">
+            <input hidden asp-for="LockoutEnabled">
+            <input hidden asp-for="PasswordHash">
             <div class="form-group">
                 <label asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control" disabled />
+                <input asp-for="UserName" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Email"></label>
@@ -39,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="BirthYear"></label>
-                <input asp-for="BirthYear" class="form-control" type="number"/>
+                <input asp-for="BirthYear" class="form-control" type="number" />
             </div>
             <div class="form-group">
                 <label asp-for="Gender"></label>
@@ -53,8 +58,8 @@
                 <select asp-for="CountryId" asp-items="Db.GetCountries()" class="form-control"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Language"></label>
-                <select asp-for="LanguageId" asp-items="Db.GetLanguages()" class="form-control"></select>
+                <label asp-for="SecondLanguage"></label>
+                <select asp-for="SecondLanguageId" asp-items="Db.GetLanguages()" class="form-control"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Temperament"></label>
