--- a/Cataloguer/Views/Home/Album.cshtml
+++ b/Cataloguer/Views/Home/Album.cshtml
@@ -4,13 +4,14 @@
 }
 
 <div class="row">
-    <div class="col-sm-4 col-md-4 col-lg-4">
-        <img width="100%" class="img-thumbnail" src="@Model.PictureLink" />
+    <div class="col-sm-3">
+        <img class="img-thumbnail" src="@Model.PictureLink" style="width: 100%;" />
     </div>
-    <div class="col-sm-8 col-md-8 col-lg-8">
+    <div class="col-sm-9">
         <h1 class="text-center">@Model.Name</h1>
         @Html.Partial("_TagList", Model.Tags)
-        <h4>Artist : <a asp-controller="Home" asp-action="Artist" asp-route-name="@Model.Artist.Name">@Model.Artist.Name</a></h4>
+        <h4>Artist : <a asp-controller="Home" asp-action="Artist" 
+                        asp-route-name="@Model.Artist.Name">@Model.Artist.Name</a></h4>
         <h4>Scrobbles : @Model.Scrobbles</h4>
         <h4>Listeners : @Model.Listeners</h4>
     </div>
