--- a/Cataloguer/Views/Chart/Index.cshtml
+++ b/Cataloguer/Views/Chart/Index.cshtml
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="col-xs-6">
-        <h2 class="text-center">My rating</h2>
+        <h2 class="text-center">My chart</h2>
         @Html.Partial("_TracksTable", Model.UserRating)
         <div class="text-center">
             <a asp-action="ChangeChart" class="btn btn-primary">Change chart</a>
