--- a/Cataloguer/Views/Chart/_TracksTable.cshtml
+++ b/Cataloguer/Views/Chart/_TracksTable.cshtml
@@ -5,8 +5,8 @@
         <tr>
             <th>#</th>
             <th>Track name</th>
-            <th>Artist name</th>
-            <th>Scrobbles</th>
+            <th style="min-width: 240px;">Artist name</th>
+            <th style="min-width: 120px;">Scrobbles</th>
         </tr>
     </thead>
     <tbody>
@@ -18,7 +18,7 @@
                 <td><a asp-controller="Home" asp-action="Track" asp-route-trackName="@track.Name" 
                        asp-route-artistName="@track.Artist.Name">@track.Name</a></td>
                 <td>@track.Artist.Name</td>
-                <td style="min-width: 120px;">@track.Scrobbles</td>
+                <td>@track.Scrobbles</td>
             </tr>
         }
     </tbody>
