--- a/Cataloguer/Views/Home/Track.cshtml
+++ b/Cataloguer/Views/Home/Track.cshtml
@@ -5,7 +5,15 @@
 
 <div class="row">
     <div class="col-sm-3">
-        <img class="img-thumbnail" src="@Model.PictureLink" style="width: 100%;"/>
+        <img class="img-thumbnail" src="@Model.PictureLink" style="width: 100%;" />
+        <form asp-controller="Chart" asp-action="AddToClientChart" asp-route-trackName="@Model.Name"
+              asp-route-artistName="@Model.Artist.Name" method="post" class="form-inline" style="margin-top: 20px;">
+            <div class="form-group">
+                <label>Position</label>
+                <input name="Position" class="form-control" type="number" style="width: 100px;"/>
+            </div>
+            <button type="submit" class="btn btn-default">Add to my chart</button>
+        </form>
     </div>
     <div class="col-sm-9">
         <h1 class="text-center">@Model.Name</h1>
