Creating Admin controller and add new functionality to the neural network

--- a/Cataloguer/Views/Chart/_TracksTable.cshtml
+++ b/Cataloguer/Views/Chart/_TracksTable.cshtml
@@ -5,8 +5,8 @@
         <tr>
             <th>#</th>
             <th>Track name</th>
-            <th style="min-width: 240px;">Artist name</th>
-            <th style="min-width: 120px;">Scrobbles</th>
+            <th style="width: 200px;">Artist name</th>
+            <th style="min-width: 100px;">Scrobbles</th>
         </tr>
     </thead>
     <tbody>
