--- a/Cataloguer/Views/Shared/_Layout.cshtml
+++ b/Cataloguer/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Chart" asp-action="Index" class="navbar-brand">Chart</a></li>
+                    <li><a asp-controller="Admin" asp-action="Index" class="navbar-brand">Admin</a></li>
                     <li>
                         <form method="get" asp-controller="Home" asp-action="Search"
                               class="form-inline" style="margin-top: 8px; margin-bottom: 8px;">
